# dmbcs-micro-server

./: .gitignore  CMakeLists.txt  README.md  configure.ac  dmbcs-micro-server.pc.in  dmbcs-micro-server.texi  makefile.am  version.texi.in
DMBCS/micro-server/: CMakeLists.txt  http-server--impl.h  http-server.cc  http-server.h  hyper-tags.cc  hyper-tags.h  makefile.am  micro-server.h  query-string.cc  query-string.h  tcp-server.cc  tcp-server.h  udp-server.cc  udp-server.h  utils.cc  utils.h
